[gd_scene load_steps=22 format=2]

[ext_resource path="res://script/speel.gd" type="Script" id=1]
[ext_resource path="res://assets/speels/explosion/explosion1.png" type="Texture" id=2]
[ext_resource path="res://assets/speels/explosion/explosion2.png" type="Texture" id=3]
[ext_resource path="res://assets/speels/explosion/explosion3.png" type="Texture" id=4]
[ext_resource path="res://assets/speels/explosion/explosion4.png" type="Texture" id=5]
[ext_resource path="res://assets/speels/explosion/explosion5.png" type="Texture" id=6]
[ext_resource path="res://assets/speels/explosion/explosion6.png" type="Texture" id=7]
[ext_resource path="res://assets/speels/explosion/explosion7.png" type="Texture" id=8]
[ext_resource path="res://assets/speels/frost/frostskill1.png" type="Texture" id=9]
[ext_resource path="res://assets/speels/frost/frostskill2.png" type="Texture" id=10]
[ext_resource path="res://assets/speels/frost/frostskill3.png" type="Texture" id=11]
[ext_resource path="res://assets/speels/frost/frostskill4.png" type="Texture" id=12]
[ext_resource path="res://assets/speels/frost/frostskill5.png" type="Texture" id=13]
[ext_resource path="res://assets/speels/frost/frostskill6.png" type="Texture" id=14]
[ext_resource path="res://assets/speels/fire/fire1.png" type="Texture" id=15]
[ext_resource path="res://assets/speels/fire/fire2.png" type="Texture" id=16]
[ext_resource path="res://assets/speels/fire/fire3.png" type="Texture" id=17]
[ext_resource path="res://assets/speels/fire/fire4.png" type="Texture" id=18]
[ext_resource path="res://tileset/light.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.2971, 17.5281 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null, ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Blast",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 14 ) ],
"loop": true,
"name": "Frost",
"speed": 6.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "Fire",
"speed": 5.0
} ]

[node name="speel" type="Node2D" groups=[
"cast",
]]
z_index = 2
script = ExtResource( 1 )

[node name="fire" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="area" type="CollisionShape2D" parent="fire"]
shape = SubResource( 1 )

[node name="speels" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Blast"
frame = 5
playing = true

[node name="when_speel_anim_finish" type="Timer" parent="."]

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 19 )
texture_scale = 0.2
color = Color( 0.24556, 0.736131, 0.816406, 1 )
[connection signal="body_entered" from="fire" to="." method="_on_fire_body_entered"]
[connection signal="animation_finished" from="speels" to="." method="_on_speels_animation_finished"]
[connection signal="timeout" from="when_speel_anim_finish" to="." method="_on_when_speel_anim_finish_timeout"]
